* NEWS: Updated. * doc/libtool.texi (Thread Safety in libltdl): New node describing the  application the new MT API. * libltdl/ltdl.h: Prototypes. * libltdl/ltdl.c: Use these functions throughout the rest of the file to provide thread locking. (lt_dlmutex_register): New function to set callbacks for multi-threaded calls into libltdl. (lt_dl_mutex_lock): Type of a locking callback function. (lt_dl_mutex_lock): Type of an unlocking callback function. (lt_dl_mutex_seterror): Type of a callback function to save the last libltdl error message in thread local storage. (lt_dl_mutex_geterror): Type of a callback function to retrieve the last saved error message from thread local storage.
* ltconfig.in: Likewise.
* ltcf-c.sh: Likewise.
* ltcf-cxx.sh: Likewise.
* ltcf-gcj.sh: Likewise.

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ New in 1.4b: 2000-??-??; CVS version 1.4a, Libtool team:
 * Support for GNU gcj compiler.
 
 New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
+* Multithread safe with lt_dlmutex_register callback registration.
 * New -no-install flag to avoid the use of executable wrapper scripts.
 * New --with-pic, -prefer-pic and -prefer-non-pic flags to control
   the generation of PIC/non-PIC code.
