--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,30 @@
+2001-03-05  Gary Vaughan  <gvv@techie.com>
+
+	* NEWS: Updated.
+	* doc/libtool.texi (Thread Safety in libltdl): New node describing
+	the  application the new MT API.
+	* libltdl/ltdl.h: Prototypes.
+	* libltdl/ltdl.c: Use these functions throughout the rest of
+	the file to provide thread locking.
+	(lt_dlmutex_register): New function to set callbacks for
+	multi-threaded calls into libltdl.
+	(lt_dl_mutex_lock): Type of a locking callback function.
+	(lt_dl_mutex_lock): Type of an unlocking callback function.
+	(lt_dl_mutex_seterror): Type of a callback function to save the
+	last libltdl error message in thread local storage.
+	(lt_dl_mutex_geterror): Type of a callback function to retrieve
+	the last saved error message from thread local storage.
+
 2001-03-05  Akim Demaille  <akim@epita.fr>
 
 	* ltmain.sh: Don't quote the argument of case/esac and
 	assignments.
 	* libtool.m4: Likewise.
-
+	* ltconfig.in: Likewise.
+	* ltcf-c.sh: Likewise.
+	* ltcf-cxx.sh: Likewise.
+	* ltcf-gcj.sh: Likewise.
+	
 2001-03-05  Robert Boehne  <rboehne@ricardo-us.com>
 
 	* ltmain.in: Add support for the -objectlist option in
