--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -170,6 +170,7 @@ Using libltdl
 
 * Libltdl interface::           How to use libltdl in your programs.
 * Modules for libltdl::         Creating modules that can be @code{dlopen}ed.
+* Thread Saftey in libltdl::	Registering callbacks for multi-thread safety.
 * User defined module data::    Associating data with loaded modules.
 * Module loaders for libltdl::  Creating user defined module loaders.
 * Distributing libltdl::        How to distribute libltdl with your package.
@@ -2828,6 +2829,7 @@ distribution terms that you use for the rest of that program.
 @menu
 * Libltdl interface::           How to use libltdl in your programs.
 * Modules for libltdl::         Creating modules that can be @code{dlopen}ed.
+* Thread Saftey in libltdl::	Registering callbacks for multi-thread safety.
 * User defined module data::    Associating data with loaded modules.
 * Module loaders for libltdl::  Creating user defined module loaders.
 * Distributing libltdl::        How to distribute libltdl with your package.
@@ -3122,6 +3124,55 @@ foo1_la_SOURCES = foo1.c
 foo1_la_LDFLAGS = -module
 ...
 @end example
+
+
+@node Thread Saftey in libltdl
+@section Using libtldl in a multi threaded environment
+
+Using the @code{lt_dlmutex_register()} function, and by providing some
+appropriate callback function definitions, libltdl can be used in a
+multi-threaded environment.
+
+@deftypefn {Type} void lt_dlmutex_lock (void)
+This is the type of a function pointer holding the address of a function
+which will be called at the start of parts of the libltdl implementation
+code which require a mutex lock.
+
+Because libltdl is inherantly recursive, it is important that the
+locking mechanism employed by these callback functions are reentrant, or
+else strange problems will occur.
+@end deftypefn
+
+@deftypefn {Type} void lt_dlmutex_unlock (void)
+The type of a matching unlock function.
+@end deftypefn
+
+@deftypefn {Type} void lt_dlmutex_seterror @w{(const char *@var{error});}
+Many of the functions in the libltdl @sc{api} have a special return
+value to indicate to the client that an error has occured.  Normally (in
+single threaded applications) a string describing that error can be
+retrieved from internal storage with @code{lt_dlerror()}.
+
+A function of this type must be registered with the library in order for
+it to work in a multi-threaded context.  The function should store any
+error message passed in thread local storage.
+@end deftypefn
+
+@deftypefn {Type} {const char *} lt_dlmutex_geterror (void)
+The type of a matching callback function to retrieve the last stored
+error message from thread local storage.
+
+When regeistered correctly this function will be used by
+@code{lt_dlerror())} from all threads to retrieve error messages for the
+client.
+@end deftypefn
+
+@deftypefn {Function} int lt_dlmutex_register (@w{lt_dlmutex_lock *@var{lock}}, @w{lt_dlmutex_unlock *@var{unlock}}, @w{lt_dlmutex_set_error *@var{seterror}}, @w{lt_dlmutex_geterror *@var{geterror})}
+Use this function to register one of each of function ttypes described
+above in preparation for multi-threaded use of libltdl.  All arguments
+must be valid non-@code{NULL} function addresses, or else all
+@code{NULL} to return to single threaded operation.
+@end deftypefn
 
 
 @node User defined module data
