--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-03-06  Gary Vaughan  <gvv@techie.com>
+
+	From Albert Chin-A-Young <china@thewrittenword.com>
+	* libtool.m4: Apply missing m4 quotes that were originally applied to
+	HEAD branch only.
+	
 2001-03-05  Gary Vaughan  <gvv@techie.com>
 
 	* NEWS: Updated.
