* ltmain.in: When dropping dependencies of a -no-undefined library, give up on building a shared library.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-2001-03-06  Alexandre Oliva  <aoliva@redhat.com>
+2001-03-06  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* ltmain.in: When dropping dependencies of a -no-undefined
+	library, give up on building a shared library.
 
 	* ltcf-cxx.sh (archive_cmds) [HP-UX, GCC]: Port.
 
