--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-03-06  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* ltmain.in: When dropping dependencies of a -no-undefined
+	library, give up on building a shared library.
+
 20001-03-05  Akim Demaille  <akim@epita.fr>
 
 	* ltmain.sh: Don't quote the argument of case/esac and
