--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-03-07  Gary V. Vaughan  <gvv@techie.com>
+
+	From Tor Lillqvist <tml@iki.fi>
+	* ltmain.in (library_names_spec): Use an appropriate filename
+	prefix for dlls -- lib for mingw; cyg for cygwin; pw for pw32.
+
 2001-03-06  Alexandre Oliva  <aoliva@redhat.com>
 
 	* ltconfig.in (can_build_shared) [AIX 4.[01], GCC]: GCC up to
