--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
 2001-03-07  Gary V. Vaughan  <gvv@techie.com>
 
+	* libtool.m4 (library_names_spec): Using m4 quotes correctly this
+	time around!
+	
+	From Tor Lillqvist <tml@iki.fi>
 	* libtool.m4 (library_names_spec): Use an appropriate filename
 	prefix for dlls -- lib for mingw; cyg for cygwin; pw for pw32.
-	From Tor Lillqvist <tml@iki.fi>
 
 2001-03-06  Alexandre Oliva  <aoliva@redhat.com>
 
