--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 2001-03-07  Gary V. Vaughan  <gvv@techie.com>
+	
+	From Tor Lillqvist <tml@iki.fi>
+	* ltcf-c.sh, ltcf-gcj.sh (export_symbols): On Windows, if the
+	export_symbols file (which has been passed to libtool with the
+	-export-symbols command line switch) already is a .def file, use
+	it as is.
 
 	From Tor Lillqvist <tml@iki.fi>
 	* ltmain.in (library_names_spec): Use an appropriate filename
