--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-03-08  Gary V. Vaughan  <gvv@techie.com>
+
+	* ltconfig.in (library_names_spec): Undo latin-1 spaces I pasted
+	in yesterday by mistake.
+	
 2001-03-07  Gary V. Vaughan  <gvv@techie.com>
 	
 	From Tor Lillqvist <tml@iki.fi>
@@ -7,7 +12,7 @@
 	it as is.
 
 	From Tor Lillqvist <tml@iki.fi>
-	* ltmain.in (library_names_spec): Use an appropriate filename
+	* ltconfig.in (library_names_spec): Use an appropriate filename
 	prefix for dlls -- lib for mingw; cyg for cygwin; pw for pw32.
 
 2001-03-06  Alexandre Oliva  <aoliva@redhat.com>
