--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-03-13  Alexandre Oliva  <aoliva@redhat.com>
+
+	* ltconfig.in (lt_cv_compiler_c_o): Cache it.
+	* ltcf-gcj.sh (lt_cv_compiler_c_o): Set it.
+
 2001-03-10  Peter Eisentraut  <peter_e@gmx.net>
 
 	* ltmain.in (clean):  Fix wrong variable use.
