--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-03-16  Albert Chin  <china@thewrittenword.com>
+	
+	* ltcf-cxx.sh (archive_cmds) [HP-UX, GCC]: Link with -fPIC.
+
 2001-03-13  Alexandre Oliva  <aoliva@redhat.com>
 
 	* ltconfig.in (lt_cv_compiler_c_o): Cache it.
