--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-03-16  Albert Chin  <china@thewrittenword.com>
+
+	* libtool.m4 (save_CPPFLAGS): Fix typo.
+
 2001-03-13  Alexandre Oliva  <aoliva@redhat.com>
 
 	* libtool.m4 (lt_cv_compiler_c_o): Cache it.
