--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-03-29  Edward M. Lee  <tailbert@yahoo.com>
+
+	* libtoolize.in: Check configure.ac and prefer configure.ac to
+	configure.in.
+	
 2001-03-16  Albert Chin  <china@thewrittenword.com>
 
 	* libtool.m4 (save_CPPFLAGS): Fix typo.
