--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-03-29  Edward M. Lee  <tailbert@yahoo.com>
+
+	* libtoolize.in: Check configure.ac and prefer configure.ac to
+	configure.in.
+	
 2001-03-22  Laurynas Biveinis  <lauras@softhome.net>
 
 	* ltcf-c.sh: Clear ac_cv_prog_cc_pic for DJGPP.  Do not add
