--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@
 	../bin/cygFOO-version.dll for normal dlls. dlls for modules
 	remain with the .la file.
 
+	* libltdl/ltdl.c:  Use windows paths while calling LoadLibrary.
+	
 2001-03-22  Laurynas Biveinis  <lauras@softhome.net>
 
 	* ltcf-c.sh: Clear ac_cv_prog_cc_pic for DJGPP.  Do not add
