--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
+New in 1.3d: 2001-04-02; CVS version 1.3c, Libtool team:
 * ltconfig is no more.  Generation of libtool happens directly from
   the configure file.
 * Multithread safe with lt_dlmutex_register callback registration.
@@ -33,19 +33,6 @@ New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
 * Initial support for Paul Sokolovsky's pw32 POSIX over win32 layer.
 * Many bugfixes (especially in libltdl)
 
-New in 1.3.5: 2000-05-27, CVS version 1.3.4a, Libtool team:
-* Support for mac OS X (rhapsody).
-* Support for *-sequent-sysv4.
-* Support for Cygwin-1.1.0.
-* Support recent dlltool formats.
-* Bugfixes.
-
-New in 1.3.4: 1999-12-08, CVS version 1.3.3a, Libtool team:
-* Support for Compaq Tru64 V5.0.
-* Improved support for Digital Unix V4.*.
-* Improved support for NetBSD, FreeBSD and Unixware.
-* Many fine bugfixes.
-
 New in 1.3b: 1999-07-02; CVS version 1.3a, Libtool team:
 * Complete inter-library dependencies support. It's now possible
   to link libtool libraries against other libtool libraries.
@@ -64,6 +51,19 @@ New in 1.3b: 1999-07-02; CVS version 1.3a, Libtool team:
 * New `clean' mode to delete uninstalled files.
 * New demos and tests
 * Various bugfixes
+
+New in 1.3.5: 2000-05-27, CVS version 1.3.4a, Libtool team:
+* Support for mac OS X (rhapsody).
+* Support for *-sequent-sysv4.
+* Support for Cygwin-1.1.0.
+* Support recent dlltool formats.
+* Bugfixes.
+
+New in 1.3.4: 1999-12-08, CVS version 1.3.3a, Libtool team:
+* Support for Compaq Tru64 V5.0.
+* Improved support for Digital Unix V4.*.
+* Improved support for NetBSD, FreeBSD and Unixware.
+* Many fine bugfixes.
 
 New in 1.3.3: 1999-07-02, CVS version 1.3.2a, Libtool team:
 * New `-dlpreopen force' flag to ensure that
