--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-04-03  Gary V. Vaughan  <gvv@techie.com>
+
+	* libtool.m4 (_LT_AC_LTCONFIG_HACK):  Remove the spurious
+	`dnl' from the help text of --with-pic.
+	Reported by stefan <stefan@lkcc.org>
+
 2001-04-02  Gary V. Vaughan  <gvv@techie.com>
 
 	* configure.in: bumped version to 1.3e.
