--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2001-04-05  Gary V. Vaughan  <gvv@techie.com>
 
+	* tests/Makefile.am (TESTS): Delete references to depdemo-dups.test.
+	* tests/depdemo-dups.test:  Removed, as part of the patch
+	reversion below.
+	* ltmain.in: Revert my change from 2001-03-31.  Although it
+	was technically correct, it opens a whole can of worms we don't
+	want to deal with right now.
+
 	From Ahmed Masud <masud@googgun.com>
 	* libltdl/ltdl.c (sys_shl_open):  Return a NULL module handle
 	for self opening.
