--- a/NEWS
+++ b/NEWS
@@ -1,16 +1,16 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 1.4b: 2000-??-??; CVS version 1.4a, Libtool team:
+New in 1.4b: 2001-??-??; CVS version 1.4a, Libtool team:
 * Full support for C++ compiler.
 * Support for GNU gcj compiler.
 
-New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
+New in 1.3d: 2001-04-02; CVS version 1.3c, Libtool team:
+* ltconfig is no more.  Generation of libtool happens directly from
+  the configure file.
 * Multithread safe with lt_dlmutex_register callback registration.
 * New -no-install flag to avoid the use of executable wrapper scripts.
 * New --with-pic, -prefer-pic and -prefer-non-pic flags to control
   the generation of PIC/non-PIC code.
-* New --build flag to ltconfig to help with build cross compilation
-  environments is inherited from --build flag passed to configure.
 * Support for hardcoding run-time paths (-R) into libraries.
 * Support -dlopen and -dlpreopen for libraries.
 * Libtool now allows you to link shared libraries against static code.
@@ -28,24 +28,12 @@ New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
 * libltdl can now be built as a dll with win32.
 * m4 macros needed to configure libltdl split out into libltdl/ltdl.m4.
 * New port to NEWS-OS Release 6.
-* Improved support for darwin (rhapsody), mingw32, Compaq Tru64 V5.0
+* Improved support for darwin (rhapsody), mingw32, NetBSD, Compaq Tru64 V5.0
   and Digital Unix V4.*.
 * Initial support for ia64 linux.
 * Initial support for a.out freebsd shared libs.
 * Initial support for Paul Sokolovsky's pw32 POSIX over win32 layer.
 * Many bugfixes (especially in libltdl)
-
-New in 1.3.5: 2000-05-27, CVS version 1.3.4a, Libtool team:
-* Support for mac OS X (rhapsody).
-* Support for *-sequent-sysv4.
-* Support for Cygwin-1.1.0.
-* Support recent dlltool formats.
-* Bugfixes.
-
-New in 1.3.4: 1999-12-08, CVS version 1.3.3a, Libtool team:
-* Support for Compaq Tru64 V5.0.
-* Improved support for NetBSD, FreeBSD and Unixware.
-* Many fine bugfixes.
 
 New in 1.3b: 1999-07-02; CVS version 1.3a, Libtool team:
 * Complete inter-library dependencies support. It's now possible
@@ -65,6 +53,18 @@ New in 1.3b: 1999-07-02; CVS version 1.3a, Libtool team:
 * New `clean' mode to delete uninstalled files.
 * New demos and tests
 * Various bugfixes
+
+New in 1.3.5: 2000-05-27, CVS version 1.3.4a, Libtool team:
+* Support for mac OS X (rhapsody).
+* Support for *-sequent-sysv4.
+* Support for Cygwin-1.1.0.
+* Support recent dlltool formats.
+* Bugfixes.
+
+New in 1.3.4: 1999-12-08, CVS version 1.3.3a, Libtool team:
+* Support for Compaq Tru64 V5.0.
+* Improved support for NetBSD, FreeBSD and Unixware.
+* Many fine bugfixes.
 
 New in 1.3.3: 1999-07-02, CVS version 1.3.2a, Libtool team:
 * New `-dlpreopen force' flag to ensure that
