--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-04-06  Nick Hudson  <skrll@netbsd.org>
+
+	* ltmain.in: Implement a new deplibs_check_method called
+	match_pattern that does pattern matching on filenames...
+	* libtool.m4: ...use it with NetBSD
+
 2001-04-05  Gary V. Vaughan  <gvv@techie.com>
 
 	* doc/libtool.texi (Multiple dependencies): A note about the
