--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-1001-04-10  Aneesh Kumar K.V  <kvaneesh@hotmail.com>
+2001-04-11  Ossama Othman  <ossama@uci.edu>
+
+	* AUTHORS: Added myself to the list of maintainers.
+
+2001-04-10  Aneesh Kumar K.V  <kvaneesh@hotmail.com>
 
 	* ltcf-cxx.sh (archive_expsym_cmds, osf4/osf5):  Added support
 	for cxx	under Compaq Tru64.
