--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-11  Ossama Othman  <ossama@uci.edu>
+
+	* AUTHORS: Added myself to the list of maintainers.
+
 2001-04-08  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4 (hardcode_libdir_flag_spec, osf4/osf5): Use ${wl}
