--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2001-04-11  Michael Matz  <matzmich@cs.tu-berlin.de>
 
-	* ltmain.in: recognize "CC" as default --tag argument to resolve
+	* ltmain.in: Recognize "CC" as default --tag argument to resolve
 	also ambiguities with that language.
 
 2001-04-11  Alexandre Oliva  <aoliva@redhat.com>
