--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-11  Alexandre Oliva  <aoliva@redhat.com>
+
+	* libtool.m4 (no_undefined_flag) [Solaris ld]: Change to -zdefs.
+
 2001-04-11  Ossama Othman  <ossama@uci.edu>
 
 	* AUTHORS: Added myself to the list of maintainers.
