--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-21  Nick Hudson  <skrll@netbsd.org>
+
+	* ltmain.in: Correct an error in yesterday's patch.
+
 2001-04-20  Nick Hudson  <skrll@netbsd.org>
 
 	* libtool.m4: Improve NetBSD support.
