--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-21  Gary V. Vaughan  <gvv@techie.com>
+
+	* TODO:  propose pkg-config merge.
+
 2001-04-21  Nick Hudson  <skrll@netbsd.org>
 
 	* ltmain.in: Correct an error in yesterday's patch.
