--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-04-22  Gary V. Vaughan  <gvv@techie.com>
+
+	* doc/PLATFORMS:  Updated with various platforms successfully
+	tested by members of libtool@gnu.org.
+
 2001-04-21  Gary V. Vaughan  <gvv@techie.com>
 
 	* TODO:  propose pkg-config merge.
